--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,3 +8,7 @@ vcenter:
   cluster: mycluster
   resource_pool: ~
 
+ansible_port: 22
+instance_wait_retry_limit: 300
+instance_wait_connection_timeout: 300
+
