add folder which seems to be required by the latest module that comes with ansible 2.5

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,7 @@
     datacenter: "{{ providers.vcenter.datacenter }}"
     cluster: "{{ providers.vcenter.cluster }}"
     resource_pool: "{{ providers.vcenter.resource_pool|default('') }}"
+    folder: "{{ providers.vcenter.folder|default('') }}"
     name: "{{ item.name }}"
     template: "{{ item.template }}"
     snapshot_src: "{{ item.snapshot_src|default(omit) }}"
