--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,13 +39,13 @@
   with_items: "{{ deploy.results }}"
 
 - debug:
-    var: item.instance.hw_eth0.ipaddresses[0]
+    var: item.instance
   with_items: "{{ instances.results }}"
 
 - name: Waiting for servers to come online
   wait_for:
     host: "{{ item.instance.hw_eth0.ipaddresses[0] }}"
-    port: 5986
+    port: "{{ ansible_port }}"
     timeout: "{{ instance_wait_connection_timeout }}"
   with_items: "{{ instances.results }}"
   when: (instances | changed) and (item.instance is defined)
