change to use ip4 variable for ip address

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,13 +38,9 @@
   delay: 10
   with_items: "{{ deploy.results }}"
 
-- debug:
-    var: item.instance
-  with_items: "{{ instances.results }}"
-
 - name: Waiting for servers to come online
   wait_for:
-    host: "{{ item.instance.hw_eth0.ipaddresses[0] }}"
+    host: "{{ item.instance.ipv4 }}"
     port: "{{ ansible_port }}"
     timeout: "{{ instance_wait_connection_timeout }}"
   with_items: "{{ instances.results }}"
