--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -42,6 +42,20 @@
     var: item.instance
   with_items: "{{ instances.results }}"
 
+- name: wait for VMware tools to become available
+  vmware_guest_tools_wait:
+    hostname: "{{ lookup('env', 'VMWARE_HOST')|default(providers.vcenter.hostname) }}"
+    username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
+    password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
+    validate_certs: no
+    uuid: "{{ item.instance.instance_uuid }}"
+  register: facts
+  with_items: "{{ instances.results }}"
+
+- debug:
+    var: item.instance
+  with_items: "{{ facts.results }}"
+
 - name: waiting for servers to come online
   wait_for:
     host: "{{ item.instance.ipv4 }}"
