change to hw_name

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -56,7 +56,7 @@
     seconds: 90
 
 - debug:
-    var: item.instance.hw_product_uuid | regex_replace('********', '20')
+    var: item.instance.hw_product_uuid | regex_replace('\*\*\*\*\*\*\*\*', '20')
   with_items: "{{ instances.results }}"
 
 - name: gather facts from vcenter
@@ -66,7 +66,7 @@
     password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
     datacenter: "{{ providers.vcenter.datacenter }}"
     validate_certs: no
-    uuid: "{{ tem.instance.hw_product_uuid | regex_replace('\\*\\*\\*\\*\\*\\*\\*\\*', '20') }}"
+    uuid: "{{ tem.instance.hw_product_uuid | regex_replace('\*\*\*\*\*\*\*\*', '20') }}"
   register: instance_facts
   with_items: "{{ instances.results }}"
 
