--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,9 +39,8 @@
   with_items: "{{ deploy.results }}"
 
 - debug:
-    var: item.instance
+    var: item
   with_items: "{{ instances.results }}"
-
 
 - name: waiting for servers to come online
   wait_for:
@@ -49,27 +48,5 @@
     port: "{{ ansible_port }}"
     timeout: "{{ instance_wait_connection_timeout }}"
   with_items: "{{ instances.results }}"
-  when: (instances | changed) and (item.instance is defined)
+  when: (instances | changed) and (item.instance is defined) and (
   ignore_errors: yes
-
-- pause:
-    seconds: 90
-
-- debug:
-    var: item.instance.hw_product_uuid | replace('{{ "********" }}', '20')
-  with_items: "{{ instances.results }}"
-
-- name: gather facts from vcenter
-  vmware_guest_facts:
-    hostname: "{{ lookup('env', 'VMWARE_HOST')|default(providers.vcenter.hostname) }}"
-    username: "{{ lookup('env', 'VMWARE_USER')|default(providers.vcenter.username) }}"
-    password: "{{ lookup('env', 'VMWARE_PASSWORD')|default(providers.vcenter.password) }}"
-    datacenter: "{{ providers.vcenter.datacenter }}"
-    validate_certs: no
-    uuid: '{{ item.instance.hw_product_uuid | replace("********", "20") }}'
-  register: instance_facts
-  with_items: "{{ instances.results }}"
-
-- debug:
-    var: item.instance
-  with_items: "{{ instance_facts.results }}"
