add deprovision option

--- a/tasks/deprovision.yml
+++ b/tasks/deprovision.yml
@@ -9,8 +9,7 @@
     name: "{{ inventory_hostname }}"
     uuid: "{{ hostvars[inventory_hostname].config.uuid }}"
     state: poweredoff
-  delegate_to: 127.0.0.1
-  connection: local
+  delegate_to: localhost
   loop: "{{ nodes }}"
   when:
     - nodes is defined
@@ -26,8 +25,7 @@
     name: "{{ inventory_hostname }}"
     uuid: "{{ hostvars[inventory_hostname].config.uuid }}"
     state: absent
-  delegate_to: 127.0.0.1
-  connection: local
+  delegate_to: localhost
   loop: "{{ nodes }}"
   when:
     - nodes is defined
