--- a/tasks/deprovision.yml
+++ b/tasks/deprovision.yml
@@ -9,6 +9,7 @@
     name: "{{ inventory_hostname }}"
     uuid: "{{ hostvars[inventory_hostname].config.uuid }}"
     state: poweredoff
+  delegate_to: 127.0.0.1
   loop: "{{ nodes }}"
   when:
     - nodes is defined
@@ -24,6 +25,7 @@
     name: "{{ inventory_hostname }}"
     uuid: "{{ hostvars[inventory_hostname].config.uuid }}"
     state: absent
+  delegate_to: 127.0.0.1
   loop: "{{ nodes }}"
   when:
     - nodes is defined
