increase default timeout to 400 seconds

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,5 +1,8 @@
 ---
 
+- include_tasks: preflight_check.yml
+  when: role_action == 'provision'
+
 - include_tasks: provision.yml
   when: role_action == 'provision'
 
