--- a/tasks/preflight_check.yml
+++ b/tasks/preflight_check.yml
@@ -41,6 +41,6 @@
     - item.ansible_port is defined
   loop: "{{ nodes }}"
 
-- name: ensure ansible_port variable is defined per node (linux)
+- name: ensure ansible_port variable is defined per node
   set_fact:
     nodes: "{{ existing_nodes|default([]) + linux_nodes|default([]) + windows_nodes|default([]) }}"
