increase default timeout to 400 seconds

--- a/tasks/preflight_check.yml
+++ b/tasks/preflight_check.yml
@@ -23,7 +23,8 @@
     windows_nodes: "{{ windows_nodes|default([]) + [item | combine({'ansible_port': 5986})] }}"
   when:
     - item.ansible_port is not defined
-    - "'windows' in template_facts.virtual_machines[item.template] | lower"
+    - template_facts.virtual_machines[item.template].guest_fullname is defined
+    - "'windows' in template_facts.virtual_machines[item.template].guest_fullname | lower"
   loop: "{{ nodes }}"
 
 - name: ensure ansible_port variable is defined per node (linux)
@@ -31,14 +32,15 @@
     linux_nodes: "{{ linux_nodes|default([]) + [item | combine({'ansible_port': 22})] }}"
   when:
     - item.ansible_port is not defined
-    - "'windows' not in template_facts.virtual_machines[item.template] | lower"
+    - template_facts.virtual_machines[item.template].guest_fullname is defined
+    - "'windows' not in template_facts.virtual_machines[item.template].guest_fullname | lower"
   loop: "{{ nodes }}"
 
 - name: check if any existing nodes with ansible_port defined
   set_fact:
     existing_nodes: "{{ existing_nodes|default([]) + [item] }}"
   when:
-    - item.ansible_port is defined
+    - item.ansible_port is defined or template_facts.virtual_machines[item.template].guest_fullname is not defined
   loop: "{{ nodes }}"
 
 - name: ensure ansible_port variable is defined per node
