--- a/tasks/preflight_check.yml
+++ b/tasks/preflight_check.yml
@@ -9,9 +9,23 @@
     vm_type: template
   register: template_facts
 
+- debug:
+    var: template_facts
+
 - fail:
     msg: "Template not found on vcenter: {{ item.template }}"
   when:
+    - ansible_version.full is version('2.8.0', '<')
+    - template_facts is success
+    - template_facts.virtual_machines is defined
+    - item.template is defined
+    - template_facts.virtual_machines[item.template] is not defined
+  loop: "{{ nodes }}"
+
+- fail:
+    msg: "Template not found on vcenter: {{ item.template }}"
+  when:
+    - ansible_version.full is version('2.8.0', '>=')
     - template_facts is success
     - template_facts.virtual_machines is defined
     - item.template is defined
