--- a/tasks/preflight_check.yml
+++ b/tasks/preflight_check.yml
@@ -9,9 +9,6 @@
     vm_type: template
   register: template_facts
 
-- debug:
-    var: template_facts
-
 - fail:
     msg: "Template not found on vcenter: {{ item.template }}"
   when:
@@ -29,7 +26,7 @@
     - template_facts is success
     - template_facts.virtual_machines is defined
     - item.template is defined
-    - template_facts.virtual_machines[item.template] is not defined
+    - item.template not in (template_facts.virtual_machines | map(attribute='guest_name') | list)
   loop: "{{ nodes }}"
 
 - name: ensure ansible_port variable is defined per node (windows)
