add vmware tags disable library

--- a/tasks/add_tag.yml
+++ b/tasks/add_tag.yml
@@ -8,7 +8,7 @@
   register: vmware_tag_details
 
 - debug:
-    msg: "{{ vmware_tag_details.tag_facts }}"
+    msg: "{{ vmware_tag_details }}"
 
 - name: create tags
   vmware_tag:
